--- a/4_Convolutional/4.2-EXE-CNN-CIFAR-10.ipynb
+++ b/4_Convolutional/4.2-EXE-CNN-CIFAR-10.ipynb
@@ -26,7 +26,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 355,
+      "execution_count": null,
       "metadata": {
         "id": "v3u2GIWr81Su"
       },
@@ -70,7 +70,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 356,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -113,7 +113,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 357,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -167,7 +167,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 358,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -211,7 +211,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 359,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -327,7 +327,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 360,
+      "execution_count": null,
       "metadata": {
         "id": "48AX85QP81TR"
       },
@@ -356,7 +356,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 361,
+      "execution_count": null,
       "metadata": {
         "id": "iWT0ULctWvm1",
         "colab": {
@@ -393,7 +393,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 362,
+      "execution_count": null,
       "metadata": {
         "id": "NkUanRRb81TW",
         "colab": {
@@ -527,7 +527,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 363,
+      "execution_count": null,
       "metadata": {
         "id": "7LT0RoAC81Tc",
         "colab": {
@@ -646,7 +646,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 364,
+      "execution_count": null,
       "metadata": {
         "id": "Smv6_BwF81Ti"
       },
@@ -685,7 +685,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 365,
+      "execution_count": null,
       "metadata": {
         "id": "a5-c_CDAI7Ab",
         "colab": {
@@ -721,7 +721,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 366,
+      "execution_count": null,
       "metadata": {
         "id": "ShcEZDExI7Ab",
         "colab": {
@@ -780,7 +780,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 367,
+      "execution_count": null,
       "metadata": {
         "id": "xv75wMhVI7Ac",
         "colab": {
@@ -854,7 +854,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 368,
+      "execution_count": null,
       "metadata": {
         "id": "I09rtehbaCRH",
         "colab": {
@@ -902,13 +902,25 @@
       ]
     },
     {
-      "cell_type": "code",
-      "execution_count": 368,
+      "cell_type": "markdown",
+      "source": [
+        "**Exercise from chapter 3**  \n",
+        "*Verify that σ′(z)=σ(z)(1−σ(z)).*  \n",
+        "\n",
+        "We got $σ(z)=\\frac{1}{(1+e^{−z})}$. If we differentiate the equation σ(z) for z:\n",
+        "\n",
+        "$\\frac{d}{dz}σ(z) = \\frac{e^{-z}}{(1+e^{-z})^2}$\n",
+        "\n",
+        "And now if we calculate $σ(z)(1−σ(z))$:\n",
+        "$σ(z)(1−σ(z)) = \\frac{1}{(1+e^{−z})}*(1-\\frac{1}{(1+e^{−z})}) = \\frac{e^{-z}}{(1+e^{-z})^2}$\n",
+        "\n",
+        "We see that the two expressions are equal to one another, therefore:  \n",
+        "$\\frac{e^{-z}}{(1+e^{-z})^2} = \\frac{e^{-z}}{(1+e^{-z})^2}$\n",
+        "$σ′(z)=σ(z)(1−σ(z))$"
+      ],
       "metadata": {
-        "id": "qh7KTAdWD_zx"
-      },
-      "outputs": [],
-      "source": []
+        "id": "Pfx6d74ANU-Z"
+      }
     }
   ],
   "metadata": {
